<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffdfeaf1"
    tools:context="xavier.whu.priv.myappportfolio.MyAppPortfolio">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/my_title"
        android:id="@+id/tv_title"
        android:textSize="28dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#000000" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/media_streamer"
        android:id="@+id/bt_mediaStreamer"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tv_title"
        android:layout_margin="10dp"
        android:background="#F08C35" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/super_duo1"
        android:id="@+id/bt_scoreApp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/bt_mediaStreamer"
        android:layout_margin="10dp"
        android:background="#F08C35" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/super_duo2"
        android:id="@+id/bt_libraryApp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/bt_scoreApp"
        android:layout_margin="10dp"
        android:background="#F08C35" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/ant_terminator"
        android:id="@+id/bt_buildItBigger"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/bt_libraryApp"
        android:layout_margin="10dp"
        android:background="#F08C35" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/materialize"
        android:id="@+id/bt_xyzReader"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/bt_buildItBigger"
        android:layout_margin="10dp"
        android:background="#F08C35" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/bt_capstone"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/bt_xyzReader"
        android:layout_margin="10dp"
        android:background="#ff0000" />

</RelativeLayout>
